@@ -2,6 +2,9 @@ Cascading Change Log
 
 unreleased (wip 1.1)
 
+  Changed c.t.Fields #setComparator fieldName argument to accept Fields instances as the fieldName argument.
+  Only the first field name or position is considered.
+
   Changed c.t.TupleEntry 'get as type' accessors to now also accept c.t.Fields instances as the fieldName argument. Only
   the first field name or position is considered.
 
